syntax = "proto3";

//import "google/protobuf/empty.proto";
option java_package = "generated_code";

service GameServices{
	rpc makeSuggestion(Suggestion) returns (Confirmation);
	rpc subscribe(PlayerID) returns (Suggestion);
	
}

message Suggestion {
	int32 suggestion_id = 1;
	int32 player_id = 2;
	string weapon = 3;
	RoomInfo room = 4;
	bool is_accusation = 5;
}

message RoomInfo {
    int32 room_id = 1;
    string room_name = 2;
}

message PlayerID{
	int32 player_id = 1;
}

message Confirmation{
	int32 conf_code = 1;
}